[package]
name = "libinko"
version = "0.9.0" # VERSION
authors = ["Yorick Peterse <yorick@yorickpeterse.com>"]
edition = "2018"
build = "build.rs"
license = "MPL-2.0"

[lib]
doctest = false

[features]
libffi-system = ["libffi/system"]

[dependencies]
num_cpus = "^1.13"
parking_lot = "^0.10"
time = "^0.2"
float-cmp = "^0.8"
dirs-next = "^1.0"
libloading = "^0.6"
libffi = "^1.0"
crossbeam-deque = "^0.7"
crossbeam-channel = "^0.4"
crossbeam-utils = "^0.7"
nix = "^0.19"
ahash = "^0.4"
rand = "^0.6"
polling = "^2.0"

[dependencies.socket2]
version = "^0.3.11"
features = ["unix", "reuseport"]

[target.'cfg(windows)'.dependencies]
winapi = "^0.3"
